force-app/main/default/objects/StripePlan__c/StripePlan__c.object-meta.xml
<CustomObject>
    <label>Stripe Plan</label>
    <nameField>
        <label>StripePlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>