force-app/main/default/objects/StripePlan__c/fields/Billing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Billing_Scheme__c</fullName>
    <label>Billing Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>