force-app/main/default/objects/StripePlan__c/fields/ExternalProdId__c.field-meta.xml
<CustomField>
    <fullName>ExternalProdId__c</fullName>
    <inlineHelpText>External Product id from stripe</inlineHelpText>
    <label>ExternalProdId</label>
    <type>TextArea</type>
</CustomField>