force-app/main/default/objects/StripePlan__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>day</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>