force-app/main/default/objects/StripePlan__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription</label>
    <referenceTo>StripeSubscription__c</referenceTo>
    <relationshipLabel>Stripe Plans</relationshipLabel>
    <relationshipName>Stripe_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>