force-app/main/default/objects/StripePlan__c/fields/StripePlanId__c.field-meta.xml
<CustomField>
    <fullName>StripePlanId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Plan</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>