force-app/main/default/objects/StripePlan__c/fields/StripeSubscriptionItem__c.field-meta.xml
<CustomField>
    <fullName>StripeSubscriptionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription Item</label>
    <referenceTo>StripeSubscriptionItem__c</referenceTo>
    <relationshipLabel>Stripe Plans</relationshipLabel>
    <relationshipName>Stripe_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>